Adding Status Saver info

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="hero-content flow-up" style="animation-delay: 0.1s;">
             <h1>Crafting Digital <br><span class="gradient-text">Experiences</span></h1>
-            <p class="subtitle">A collection of 20+ innovative applications built with passion and precision.</p>
+            <p class="subtitle">A collection of innovative applications built with passion and precision.</p>
             <a href="#apps" class="cta-button">Explore Apps <i class="fa-solid fa-arrow-down"></i></a>
         </div>
     </header>
